# killme-lite-v2

./: .env.example  .gitignore  CODE_REVIEW.md  EXPLORATION_MODE.md  FIX_REPORT.md  MVP_SPEC.md  NATIVE_EXPLORATION_UPGRADE.md  README.md  TEST_RUN.md  USAGE.md  WORK_ORDER_REVIEW.md  config.example.toml  config.py  config.toml  llm.py  main.py  merger.py  pyproject.toml  router.py  state.py  state_schema.json  storage.py  validation.py
agents/: builder.md  chair.md  defender.md  executioner.md  judge.md  merger.md
tests/: test_clone_failure.py  test_close_guard.py  test_config.py  test_core_flow.py  test_exploration_mode.py  test_llm_provider.py  test_merger.py  test_session_management.py  test_validation.py
