[project]
name = "killme-lite"
version = "0.1.0"
description = "A lightweight local multi-agent deliberation runtime."
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
